# projeto-lp3

./: README.md  pyproject.toml
projeto_lp3/: app.py
projeto_lp3/static/assets/css/: cadastro.css  style.css
projeto_lp3/templates/: base.html  cadastro.html  carrinho.html  index.html
