[tool.poetry]
name = "projeto-lp3"
version = "0.1.0"
description = ""
authors = ["mouraluck <l.conceicao@aluno.ifsp.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
validate-docbr = "^1.10.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
